; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/tcpip/tcpip/extr_tinfo.c_InfoTransportLayerTdiQueryEx.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/tcpip/tcpip/extr_tinfo.c_InfoTransportLayerTdiQueryEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INFO_CLASS_GENERIC = common dso_local global i64 0, align 8
@INFO_TYPE_PROVIDER = common dso_local global i64 0, align 8
@ENTITY_TYPE_ID = common dso_local global i64 0, align 8
@CL_TL_UDP = common dso_local global i32 0, align 4
@TDI_INVALID_REQUEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @InfoTransportLayerTdiQueryEx(i64 %0, i64 %1, i64 %2, i32 %3, i32* %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i64 %0, i64* %9, align 8
  store i64 %1, i64* %10, align 8
  store i64 %2, i64* %11, align 8
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %17 = load i64, i64* %9, align 8
  %18 = load i64, i64* @INFO_CLASS_GENERIC, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %34

20:                                               ; preds = %7
  %21 = load i64, i64* %10, align 8
  %22 = load i64, i64* @INFO_TYPE_PROVIDER, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %34

24:                                               ; preds = %20
  %25 = load i64, i64* %11, align 8
  %26 = load i64, i64* @ENTITY_TYPE_ID, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %34

28:                                               ; preds = %24
  %29 = load i32, i32* @CL_TL_UDP, align 4
  store i32 %29, i32* %16, align 4
  %30 = ptrtoint i32* %16 to i32
  %31 = load i32, i32* %14, align 4
  %32 = load i32, i32* %15, align 4
  %33 = call i32 @InfoCopyOut(i32 %30, i32 4, i32 %31, i32 %32)
  store i32 %33, i32* %8, align 4
  br label %36

34:                                               ; preds = %24, %20, %7
  %35 = load i32, i32* @TDI_INVALID_REQUEST, align 4
  store i32 %35, i32* %8, align 4
  br label %36

36:                                               ; preds = %34, %28
  %37 = load i32, i32* %8, align 4
  ret i32 %37
}

declare dso_local i32 @InfoCopyOut(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
